src/objects/servicereport__c.object
<CustomObject>
    <fields>
        <fullName>AMP_power__c</fullName>
        <label>AMP power</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAS_No__c</fullName>
        <label>CAS No.</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Down_Day__c</fullName>
        <label>Down机天数（天）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email1237__c</fullName>
        <formula>CreatedBy.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#主管Email地址</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email123__c</fullName>
        <label>主管Email地址</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EquId__c</fullName>
        <formula>servicerequest__r.Equipment__c</formula>
        <label>#设备Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <formula>servicerequest__r.Equipment__r.Name</formula>
        <label>设备序列号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipmentname__c</fullName>
        <formula>servicerequest__r.Equipmentname__c</formula>
        <label>设备名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipmentunittype__c</fullName>
        <formula>servicerequest__r.Equipmentunittype__c</formula>
        <label>设备型号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <label>工作结果</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <formula>completetime__c  -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>建立技术服务报告时效</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <formula>dotime__c  -  servicerequest__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>建立服务请求时效</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FollowIsoperationTime__c</fullName>
        <label>跟手术时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IR_power__c</fullName>
        <label>IR power</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIS_No__c</fullName>
        <label>SIS No.</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceRequestType__c</fullName>
        <formula>servicerequest__r.RecordType.Name</formula>
        <label>服务请求类型</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2222__c</fullName>
        <label>备件2序列号（旧）</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X222__c</fullName>
        <label>备件2序列号（新）</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X22__c</fullName>
        <label>备件2名称</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_4__c</fullName>
        <label>备件3序列号（旧）</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acceptor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>验收人</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>技术服务报告</relationshipLabel>
        <relationshipName>onW0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>address__c</fullName>
        <formula>servicerequest__r.address__c</formula>
        <label>地址</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>baoxiushijian__c</fullName>
        <label>报修时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bugtype__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>故障类别</label>
        <referenceTo>faultcategory__c</referenceTo>
        <relationshipLabel>技术服务报告</relationshipLabel>
        <relationshipName>mRQy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccts__c</fullName>
        <label>出差天数</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chiller_water_flow__c</fullName>
        <label>chiller water flow</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>completetime__c</fullName>
        <label>完成时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>customer__c</fullName>
        <formula>servicerequest__r.customer__r.Name</formula>
        <label>客户名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>department__c</fullName>
        <formula>TEXT( person__r.department__c )</formula>
        <label>负责科室</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>depot_no__c</fullName>
        <label>备件1序列号（旧）</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dotime__c</fullName>
        <label>到达时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>endtime__c</fullName>
        <label>具体结束工作时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>firstpressure__c</fullName>
        <label>初始初级气压（Bar）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>firstpressureend__c</fullName>
        <label>最终初级气压（Bar）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fuwujiazhi__c</fullName>
        <formula>gzxss__c * 2000</formula>
        <label>服务价值（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gzxss__c</fullName>
        <label>工作小时数</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hfmj__c</fullName>
        <label>初始能量测试HF（mj）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hfmjend__c</fullName>
        <label>最终能量测试HF（mj）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hfnm__c</fullName>
        <label>初始能量测试HE（nm）</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hfnmend__c</fullName>
        <label>最终能量测试HE（nm）</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hometime__c</fullName>
        <label>具体到家时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>housing_temperature__c</fullName>
        <label>housing temperature</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>humidity_DP__c</fullName>
        <label>humidity DP</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hvv__c</fullName>
        <label>初始能量测试HV（V）</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hvvend__c</fullName>
        <label>最终能量测试HV（V）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>information__c</fullName>
        <label>设备报错信息</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>isoperation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否需要跟手术</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isupdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否更换欧堡整机</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jiejuezhouqi__c</fullName>
        <formula>completetime__c  -  baoxiushijian__c</formula>
        <label>解决周期（天）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jsfwjz__c</fullName>
        <label>技术服务价值</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>landline__c</fullName>
        <formula>person__r.landline__c</formula>
        <label>座机</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lasernum__c</fullName>
        <label>初始激光腔脉冲数（M）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lasernumend__c</fullName>
        <label>最终激光腔脉冲数（M）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leavetime__c</fullName>
        <label>出发时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>lfmj__c</fullName>
        <label>初始能量测试LF（mj）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lfmjend__c</fullName>
        <label>最终能量测试LF（mj）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lfnm__c</fullName>
        <label>初始能量测试LE（nm）</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lfnmend__c</fullName>
        <label>最终能量测试LE（nm）</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>new_spareparts_no__c</fullName>
        <label>备件1序列号（新）</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nlvsmj__c</fullName>
        <label>初始最大能量950v10s下（mj）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nlvsmjend__c</fullName>
        <label>最终最大能量950v10s下（mj）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>otherpressure__c</fullName>
        <label>初始次级气压（mBar）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>otherpressureend__c</fullName>
        <label>最终次级气压（mBar）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>part_no__c</fullName>
        <label>备件1编号</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>联系人</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>技术服务报告 (联系人)</relationshipLabel>
        <relationshipName>onYV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <formula>person__r.phone__c</formula>
        <label>手机</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postcode__c</fullName>
        <formula>servicerequest__r.postcode__c</formula>
        <label>邮编</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>receptiontime__c</fullName>
        <label>验收时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>reportdate__c</fullName>
        <label>客户报修时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>response_cycle__c</fullName>
        <description>用于描述case响应时间</description>
        <formula>DATEVALUE( dotime__c )  -  reportdate__c</formula>
        <label>响应周期（天）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>servicerequest__c</fullName>
        <label>服务请求</label>
        <referenceTo>servicerequest__c</referenceTo>
        <relationshipLabel>技术服务报告</relationshipLabel>
        <relationshipName>OPhB</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>servicetype__c</fullName>
        <label>服务类型</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>维修</fullName>
                </value>
                <value>
                    <fullName>巡检</fullName>
                </value>
                <value>
                    <fullName>设备升级</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>solution__c</fullName>
        <label>解决方案</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sparepart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件申请</label>
        <referenceTo>sparepart__c</referenceTo>
        <relationshipLabel>技术服务报告</relationshipLabel>
        <relationshipName>sparepartWv1v</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>spareparts_name__c</fullName>
        <label>备件1名称</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>starttime__c</fullName>
        <label>具体开始工作时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>状态</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>未开始</fullName>
                </value>
                <value>
                    <fullName>进行中</fullName>
                    <default>true</default>
                    <label>进行中</label>
                </value>
                <value>
                    <fullName>关闭</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>temperature_DP__c</fullName>
        <label>temperature DP</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totleprice__c</fullName>
        <formula>Field7__c +  Field8__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>技术服务总价值</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>travel_time__c</fullName>
        <formula>hometime__c  -  leavetime__c</formula>
        <label>出差时长（天）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>working_time__c</fullName>
        <formula>(endtime__c  -  starttime__c)*24</formula>
        <label>工作时长（小时）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xyzqday__c</fullName>
        <formula>dotime__c  -  baoxiushijian__c</formula>
        <label>响应周期（天）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zdnlvsmj__c</fullName>
        <label>初始最大能量1000V(Mlase)1400v(EXSO)10s下（mj）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zdnlvsmjend__c</fullName>
        <label>最终最大能量1000v(Mlase）1400v（EXSO)10s下（mj）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>技术服务报告</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field2__c</columns>
        <columns>Field1__c</columns>
        <columns>bugtype__c</columns>
        <columns>ServiceRequestType__c</columns>
        <columns>baoxiushijian__c</columns>
        <columns>dotime__c</columns>
        <columns>completetime__c</columns>
        <columns>solution__c</columns>
        <columns>servicetype__c</columns>
        <columns>servicerequest__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>S-{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>序号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>技术服务报告</pluralLabel>
    <recordTypes>
        <fullName>Luneau</fullName>
        <active>true</active>
        <label>路视设备</label>
    </recordTypes>
    <recordTypes>
        <fullName>OuBaoEquipment</fullName>
        <active>true</active>
        <label>欧堡设备</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType</fullName>
        <active>true</active>
        <description>用于记录角膜/全眼设备</description>
        <label>准分子检查设备</label>
    </recordTypes>
    <recordTypes>
        <fullName>feibai</fullName>
        <active>true</active>
        <label>飞白设备</label>
    </recordTypes>
    <recordTypes>
        <fullName>myopiaEquipment</fullName>
        <active>true</active>
        <label>准分子设备</label>
    </recordTypes>
    <recordTypes>
        <fullName>presalessupport2</fullName>
        <active>true</active>
        <label>售前支持</label>
    </recordTypes>
    <recordTypes>
        <fullName>yangji_amaris</fullName>
        <active>true</active>
        <label>备用机-准分子</label>
    </recordTypes>
    <recordTypes>
        <fullName>yangji_scout</fullName>
        <active>true</active>
        <label>备用机-检查设备</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ChooseOnlyOne</fullName>
        <active>false</active>
        <description>最终最大能量950v10s下（mj）/
最终最大能量1400v10s下（mj）这两个字段只能有一个必填，这俩字段同时填写时报错</description>
        <errorConditionFormula>IF(RecordType.DeveloperName  = &apos;myopiaEquipment&apos;, (   ISNULL(nlvsmjend__c) &amp;&amp;  ISNULL(  zdnlvsmjend__c )  )  ||  (   NOT(ISNULL(nlvsmjend__c))  &amp;&amp;  NOT(ISNULL(  zdnlvsmjend__c )) )   , false)</errorConditionFormula>
        <errorMessage>最终最大能量950v10s下（mj）、最终最大能量1400v10s下（mj）这两个字段必填一个</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HaveSameServiceRequest</fullName>
        <active>true</active>
        <description>技术服务报告和备件申请必须关联同一个服务请求</description>
        <errorConditionFormula>(servicerequest__c &lt;&gt; sparepart__r.servicerequest__c) &amp;&amp; ( sparepart__c  &lt;&gt; &quot;&quot;)</errorConditionFormula>
        <errorMessage>技术服务报告和备件申请必须关联同一个服务请求</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>guzhangleibie</fullName>
        <active>true</active>
        <description>不能选择巡检/对准系统的故障类别</description>
        <errorConditionFormula>OR( bugtype__r.Name =&quot;AMARIS-对准系统&quot;,bugtype__r.Name =&quot;Scout-巡检&quot;,bugtype__r.Name =&quot;AMARIS-巡检&quot;)</errorConditionFormula>
        <errorDisplayField>bugtype__c</errorDisplayField>
        <errorMessage>不能选择巡检/对准系统的故障类别，请选择其它故障类别</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>isoperation</fullName>
        <active>true</active>
        <errorConditionFormula>isoperation__c  &amp;&amp;  ISNULL( FollowIsoperationTime__c )</errorConditionFormula>
        <errorMessage>若勾选是否需要跟手术，则跟手术时间字段为必填</errorMessage>
    </validationRules>
</CustomObject>